# testy-zephyr-xml-importer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agent/: BLOCKED.md  PROJECT.md  judge.md  judge_feedback.md  last_judge.txt  last_planner.txt  last_worker.txt  plan.md  planner.md  progress.md  queue.md  state.md  worker.md  worker_report.md
docs/: deployment.md  dev.md  mapping.md  overview.md  spec.md  spec_full_ru.md  tree.md  troubleshooting.md  usage.md  zep-200-plan.md  zep-200-spec.md
scripts/: codex_loop_3phase.sh  status.sh
tests/: test_api_validation.py  test_attachments.py  test_health_payload.py  test_importer_integration.py  test_importer_validations.py  test_mapping.py  test_models.py  test_parser_basic.py  test_parser_xlsx.py  test_permissions.py  test_plugin_entrypoint.py  test_projects_ui.py  test_report.py  test_sanitize.py  test_view_payload.py
tests/fixtures/: sample.xml
zephyr_xml_importer/: hooks.py
zephyr_xml_importer/api/: permissions.py  serializers.py  urls.py  views.py
zephyr_xml_importer/services/: __init__.py  attachments.py  importer.py  mapping.py  models.py  parser.py  report.py  sanitize.py  testy_adapter.py  validation.py  xlsx_parser.py
zephyr_xml_importer/templates/zephyr_xml_importer/: import.html
