[project]
name = "zephyr-xml-importer"
version = "0.1.0"
description = "TestY plugin: import Zephyr Scale XML export into TestY"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7.1",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.entry-points."testy"]
zephyr-xml-importer = "zephyr_xml_importer.hooks"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
